Fix jumping datepicker icon

--- a/front-end/app/styles/dialogs/add-material.scss
+++ b/front-end/app/styles/dialogs/add-material.scss
@@ -39,10 +39,6 @@
   padding-right: 50px;
 }
 
-.md-datepicker-open .md-button.md-icon-button.md-datepicker-button{
-  margin-top: 0;
-}
-
 .datepicker-container .validation-messages{
   max-width: 180px;
 }
